# qsa

./: .gitignore  Cargo.toml  README.md
qsalib/: Cargo.toml  LICENSE
qsalib/src/: bam.rs  error.rs  lib.rs  matrices.rs  utils.rs
src/: main.rs
